Added more detail and a database for future use.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   </head>
 
   <body>
+    <div class="awesome-box row">
+      <%= link_to image_tag('ChickenIcon.jpg', class: 'icon col-3 img-fluid'), root_path %>
+      <h1 class="col-10 headline">Welcome to Quizzer3000!</h1>
+    </div>
+    <br />
     <%= yield %>
   </body>
 </html>
