--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="awesome-box row">
-  <%= image_tag 'ChickenIcon.jpg', class: 'icon col-3 img-fluid' %>
-  <h1 class="col-10 headline">Welcome to Quizzer3000!</h1>
+<div class="ask">
+  <h3>About Quizzer3000</h3>
+  Think of us as the magic 8 ball except with a chicken. 
 </div>
