--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,4 +1,21 @@
-<div class="ask">
-  <h3>About Quizzer3000</h3>
-  Think of us as the magic 8 ball except with a chicken. 
+<div class="surround">
+  <div class="row text-center">
+    <div class="col-12 col-sm feature-box">
+      <h3>Riddle Me</h3>
+      <br />
+      <p>In the mood for a riddle? Let's see if you can figure this one out.</p>
+    </div>
+
+    <div class="col-12 col-sm feature-box">  
+      <h3>Let's Laugh</h3>
+      <br />
+      <p>Like a good joke? Let's see if we can give you a knee slapper.</p>
+    </div>
+
+    <div class="col-12 col-sm feature-box">  
+      <h3>Utter Non-Sense</h3>
+      <br />
+      <p>Have you heard about a non-sense poem. They truly are non-sense, in a fun way.</p>
+    </div> 
+  </div>
 </div>
