--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -4,18 +4,24 @@
       <h3>Riddle Me</h3>
       <br />
       <p>In the mood for a riddle? Let's see if you can figure this one out.</p>
+      <br />
+      <%= link_to "Riddles", '#' , class: "btn btn-success" %>
     </div>
 
     <div class="col-12 col-sm feature-box">  
       <h3>Let's Laugh</h3>
       <br />
       <p>Like a good joke? Let's see if we can give you a knee slapper.</p>
+      <br />
+      <%= link_to "Jokes", '#', class: "btn btn-success" %>
     </div>
 
     <div class="col-12 col-sm feature-box">  
       <h3>Utter Non-Sense</h3>
       <br />
       <p>Have you heard about a non-sense poem. They truly are non-sense, in a fun way.</p>
+      <br />
+      <%= link_to "Nonsense-Verse", '#', class: "btn btn-success" %>
     </div> 
   </div>
 </div>
