--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -5,23 +5,7 @@
       <br />
       <p>In the mood for a riddle? Let's see if you can figure this one out.</p>
       <br />
-      <%= link_to "Riddles", '#' , class: "btn btn-success" %>
-    </div>
-
-    <div class="col-12 col-sm feature-box">  
-      <h3>Let's Laugh</h3>
-      <br />
-      <p>Like a good joke? Let's see if we can give you a knee slapper.</p>
-      <br />
-      <%= link_to "Jokes", '#', class: "btn btn-success" %>
-    </div>
-
-    <div class="col-12 col-sm feature-box">  
-      <h3>Utter Non-Sense</h3>
-      <br />
-      <p>Have you heard about a non-sense poem. They truly are non-sense, in a fun way.</p>
-      <br />
-      <%= link_to "Nonsense-Verse", '#', class: "btn btn-success" %>
+      <%= link_to "Riddles", riddle_path , class: "btn btn-primary" %>
     </div> 
   </div>
 </div>
